# cudf

./: pylibcudf_test.py
cpp/benchmarks/io/parquet/: parquet_reader_input.cpp
cpp/examples/: build.sh
cpp/examples/parquet_io/: CMakeLists.txt  parquet_io.cpp  read_parquet.cpp
cpp/include/cudf/detail/utilities/: batched_memset.hpp
cpp/include/cudf/io/: parquet.hpp  parquet_metadata.hpp
cpp/src/io/parquet/: reader_impl.cpp  reader_impl.hpp  reader_impl_chunking.cu  reader_impl_helpers.hpp  reader_impl_preprocess.cu
cpp/src/scalar/: scalar.cpp
python/pylibcudf/pylibcudf/io/: parquet.pxd  parquet.pyi  parquet.pyx  parquet_metadata.pxd  parquet_metadata.pyx
python/pylibcudf/pylibcudf/libcudf/io/: parquet.pxd  parquet_metadata.pxd
